--- a/chatclient/src/app/login-form/login-form.component.css
+++ b/chatclient/src/app/login-form/login-form.component.css
@@ -6,7 +6,11 @@
 }
 
 #loginContainer {
-    width: 400px;
+    width: 250px;
     margin: 0 auto;
     align-content: center;
+}
+
+mat-form-field {
+    width: 100%;
 }
