--- a/chatclient/src/app/chat-form/chat-form.component.html
+++ b/chatclient/src/app/chat-form/chat-form.component.html
@@ -1,6 +1,6 @@
 <div id="container">
   <form (ngSubmit)="onSubmit()" #chatForm="ngForm">
-    <input [(ngModel)]="messageText" class="form-control" type="text" id="input" name="msg" placeholder="Enter Message"
+    <input [(ngModel)]="messageText" class="form-control" type="text" id="input" name="msg" placeholder="{{filename}}"
       required>
     <button mat-stroked-button type="submit" id="submit">
       <mat-icon class="icon">send</mat-icon>
